Modules/Terraform-ECS-Fargate/Load-Balancer.tf
resource "aws_lb" "LB2" {
  name               = "LB2"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.SG2.id]
  subnets            = [aws_subnet.subnet111.id, aws_subnet.subnet112.id]

  tags = {
    Name = "LB2"
  }
}

resource "aws_alb_listener" "Listener" {
  load_balancer_arn = aws_lb.LB2.id
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_lb_target_group.TG2.id
    type             = "forward"
  }
}
